--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           <li><a href="contact.html">Contact</a></li>
           <li><a href="article.html">Article</a></li>
           <li><a href="books.html">Books</a></li>
+          <li><a href="tools.html">Tools</a></li>
+          <li><a href="buyaccess.html">Buy Access(New)</a></li>
+          
         </ul>
       </nav>
       <hr>
