--- a/buyaccess.html
+++ b/buyaccess.html
@@ -44,7 +44,7 @@
 
     // Redirect if already paid
     if (localStorage.getItem("hasPaid") === "true") {
-      window.location.href = "code-compiler.html";
+      window.location.href = "codecompiler.html";
     }
   </script>
 </body>
