--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="features.html">Features</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="blogs.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="article.html">Article</a></li>
           <li><a href="books.html">Books</a></li>
