--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li><a href="books.html">Books</a></li>
           <li><a href="tools.html">Tools</a></li>
           <li><a href="buyaccess.html">Buy Access(New)</a></li>
-          
+          <li><a href="toolspolicy.html">Tools Policy</a></li>
         </ul>
       </nav>
       <hr>
